[project]
name = "constrainresolution"
description = "Given min/max resolution constraints, this automatically suggests optimal dimensions while preserving aspect ratio. Ideal for Image to Image (I2I) and Image to Video (I2V) workflows!"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/EnragedAntelope/ComfyUI-ConstrainResolution"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-ConstrainResolution"
Icon = ""
