[project]
name = "constrainresolution"
description = "Resize images to fit min/max resolution limits with dimensions guaranteed divisible by 2/8/16/32/64. Aspect-ratio-preserving resize with smart cropping — ideal for image-to-image and image-to-video workflows."
version = "2.3.1"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/EnragedAntelope/ComfyUI-ConstrainResolution"
#  Used by Comfy Registry https://comfyregistry.org

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-ConstrainResolution"
Icon = ""








